# rust-nueralnetwork

./: Cargo.toml
src/: lib.rs  main.rs
src/dnn/: mod.rs  neuralNetwork.rs
src/math/: matrix.rs  mod.rs
src/mnist/: mnistUtil.rs  mod.rs
